# cookiecutter-proj

./: .gitignore  LICENSE  README.md  cookiecutter.json
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _io.data.json  (+283 more)
{{cookiecutter.__project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  mkdocs.yaml  pypath.bat  pyproject.toml  settings.toml
{{cookiecutter.__project_slug}}/docs/: reference.md  tutorials.md
{{cookiecutter.__project_slug}}/notes/: README.md  tmp_01a.ipynb
{{cookiecutter.__project_slug}}/reports/: README.md
{{cookiecutter.__project_slug}}/src/: README.md  __init__.py  __main__.py  cli.py  fsetup.py  ftools.py  inst_acc.py  inst_ddic.py  inst_tdic.py  registry.py  run_moduls.py  wf_config.json  workflow.json  workflow.py
{{cookiecutter.__project_slug}}/src/_registry/: acc.py  ddb.py  dicz.py  registry.py
{{cookiecutter.__project_slug}}/src/_workflow/: config.json  play_song.py  workflow.json  workflow.py
{{cookiecutter.__project_slug}}/src/etl/: __init__.py
{{cookiecutter.__project_slug}}/src/extr/: connect_pg.py  extract.py  sim.py
{{cookiecutter.__project_slug}}/src/helpers/: README.md  __init__.py
{{cookiecutter.__project_slug}}/src/s0-helpers/: README.md
{{cookiecutter.__project_slug}}/src/s0_helpers/: __init__.py  calc_chrono.py  calc_ratio.py  calc_sum.py  connect_acc.py  ddbtools.py  ddict.py  file_namer.py  fsetup.py  mmult.py  path_finder.py  print_obj.py  richtools.py  setup.py  shunt_files.py  tdict.py  xltools.py
{{cookiecutter.__project_slug}}/src/s0_helpers/cls/: ddict.py  dic.py  graphics.py  tdict.py  xbr.py
{{cookiecutter.__project_slug}}/src/s0_helpers/graphics/: basics.py  titles.py
{{cookiecutter.__project_slug}}/src/s0_helpers/qries/: qry_constraints.py  qry_enums.py  qry_info.py  qry_transform_log.py  qry_update.py
{{cookiecutter.__project_slug}}/src/s0_helpers/xbr/: dic.py  xbr_group.py  xbr_property.py  xbr_schema.py
{{cookiecutter.__project_slug}}/src/s0_setup/: README.md  extract_url.py  run99a_todo.py
{{cookiecutter.__project_slug}}/src/s1-extr/: __init__.py
{{cookiecutter.__project_slug}}/src/s1_extr/: README.md  extr.py  extr01a_dics.py  extr01b_acc_xbr.py  extr09a_test.py  extr09a_todo.py  extr99a_todo.py  extr_test.py  extract.py  src.py
{{cookiecutter.__project_slug}}/src/s2-transf/: __init__.py  mcalc.py  transform.py
{{cookiecutter.__project_slug}}/src/s2_transf/: README.md  clean_xl.py  edit_xl.py  files_xl.py  run99a_todo.py  src.py  transf.py  transf09a_test.py  transf09a_todo.py  transf_test.py  transform.py
{{cookiecutter.__project_slug}}/src/s3-load/: load.py  load_acc.py
{{cookiecutter.__project_slug}}/src/s3_load/: README.md  __init__.py  load.py  load09a_test.py  load09a_todo.py  load99a_todo.py  load_test.py  run99a_todo.py  src.py
{{cookiecutter.__project_slug}}/src/s4-preproc/: __init__.py
{{cookiecutter.__project_slug}}/src/s4_raw/: README.md  __init__.py  raw.py  raw09a_test.py  raw09a_todo.py  run99a_todo.py  src.py
{{cookiecutter.__project_slug}}/src/s5-eda/: __init__.py
{{cookiecutter.__project_slug}}/src/s5_pproc/: README.md  pproc.py  pproc01a_test.py  pproc09a_test.py  pproc09a_todo.py  run99a_todo.py  src.py
{{cookiecutter.__project_slug}}/src/s6-final/: __init__.py
{{cookiecutter.__project_slug}}/src/s6_eda/: README.md  eda.py  eda09a_test.py  eda09a_todo.py  eda99a_todo.py  src.py
{{cookiecutter.__project_slug}}/src/s7_final/: Xfinal01a_ddb_show.py  Xfinal01b_ddb_compact.py  Xfinal08a_xprt.py  final.py  final01a_ddb_show.py  final01b_ddb_compact.py  final08a_xprt.py  final09a_test.py  final09a_todo.py  final99a_todo.py  src.py
{{cookiecutter.__project_slug}}/src/s9_teard/: README.md  run01a_ddb_show.py  run01a_upload.py  run01a_upload_acc.py  run01b_xprt.py  run02a_ddb_compact.py  run02b_ddb_show.py  run99a_todo.py
{{cookiecutter.__project_slug}}/src/s9_teardown/: README.md
{{cookiecutter.__project_slug}}/tests/: conftest.py  test_DDict.py  test_FileNamer.py  test_PathFinder.py  test_connect_acc.py  test_connect_pg.py  test_ddic.py  test_dic.py  test_extract_acc.py  test_graphics.py  test_load_acc.py  test_log1ps.py  test_richmsg.py  test_sample.py  test_shunt_files.py  test_tdict.py  test_titles.py  test_xbr.py
{{cookiecutter.__project_slug}}/tests/fixtures/: data_paths.json  ddic1.json  ddict.json  ddict_err1.json  ddict_err2.json  df1.json  df1a.json  df2.json  dic1.json  tdict.json  xbr1.json  xbr2.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  settings.toml
{{cookiecutter.project_slug}}/docs/: explanation.md  how-to-guides.md  reference.md
{{cookiecutter.project_slug}}/notebooks/viz/: README.md
{{cookiecutter.project_slug}}/reports/viz/: README.md
{{cookiecutter.project_slug}}/src/: __init__.py  __main__.py  cli.py  dispatch.py  main.py
{{cookiecutter.project_slug}}/src/etl/: README.md  connect_pg.py  extract_acc.py  extract_url.py  main.py  sim.py
{{cookiecutter.project_slug}}/src/features/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/src/helpers/: log1ps.py  richmsg.py
{{cookiecutter.project_slug}}/src/models/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/src/preproc/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/src/windup/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: README.md  __init__.py  test_config.py  test_extract_acc.py  test_log1ps.py  test_richmsg.py  test_sample.py
(+7041 files in other folders)
