[tool.poetry]
# Operating mode is NOT PACKAGE
# package-mode = false
name = "pjrl"
version = "0.1.0"
description = "Python project for RL"
authors = ["François Lefebvre <flefebvre01@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FrankLef/pjRL.git"
repository = "https://github.com/FrankLef/pjRL.git"
packages = [
{include = "pkrl", from = "C:/Users/Public/MyPy/Packages/pkrl"},
]

[tool.poetry.urls]
Changelog = "https://github.com/FrankLef/pjRL.git/releases"

[tool.poetry.dependencies]
# python changed to allow install of scipy
python = "^3.10.6"
pandas = "^1.5.0"
pandera = "^0.22.1"
numpy = "^1.23.3"
pyodbc = "^4.0.34"
SQLAlchemy = "^2.0.0"
sqlalchemy-utils = "^0.41.2"
# used by sqlalchemy to connect to MS Access
sqlalchemy-access = "^2.0.2"
# used by sqlalchemy to connect to postgre
psycopg2 = "^2.9.9"
# Use pyarrow.feather instead of feather-format,
# feather.format exists only fo backward compatibility.
# pyarrow is better installed with `pip3 install pyarrow` in the local python,
# don't install pyarrow with poetry add, plenty of error messages ensue.
dynaconf = "^3.1.11"
rich= "^12.5.1"
typer = "^0.13.1"
tomli = "^2.0.1"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
openpyxl = "^3.1.5"
pkrl = {path = "C:/Users/Public/MyPy/Packages/pkrl", develop = true}
pyyaml = "^6.0.2"
black = "^24.10.0"
frictionless = "^5.18.0"
great-tables = "^0.16.1"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
pythonpath = ["src"]
testpaths = [
    "tests",
    "integration"
]

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]
# nativeServer = "auto"
extend-include = ["*.ipynb"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ruamel.yaml",
    "io",
    "scipy",
    "dynaconf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
