[project]
# Operating mode is NOT PACKAGE
# package-mode = false
name = "{{cookiecutter.__project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = "{{cookiecutter.license}}"
readme = "README.md"
requires-python = "{{cookiecutter.__requires_py}}"
dependencies = [
    "pandas>=3.0.0",
    "pandera>=0.22.1",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "SQLAlchemy>=2.0.0",
    "sqlalchemy-access>=2.0.2",
    "sqlalchemy-utils>=0.41.2",
    "pyodbc>=5.3.0",
    "psycopg2>=2.9.9",
    "greenlet>=3.2.2",
    "dynaconf>=3.1.11",
    "rich>=12.5.1",
    "typer>=0.22.0",
    "duckdb>=1.5.2",
    "great-tables>=0.16.1",
    "plotly>=5.24.1",
]

[project.urls]
homepage = "{{cookiecutter.git_repo}}"
repository = "{{cookiecutter.git_repo}}"
Changelog = "{{cookiecutter.__changelog}}"

# [tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
# pre-commit = "^3.6.2"
pre-commit = "^4.6.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
pythonpath = ["src"]
testpaths = ["tests", "integration"]

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]
# nativeServer = "auto"
extend-include = ["*.ipynb"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ruamel.yaml", "io", "scipy", "dynaconf"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
