[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_email}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{cookiecutter.git_repo}}"
repository = "{{cookiecutter.git_repo}}"

[tool.poetry.urls]
Changelog = "{{cookiecutter.__changelog}}"

[tool.poetry.dependencies]
# python changed to allow install of scipy
python = "^3.10.6"
requests = "^2.28.1"
pandas = "^1.5.0"
numpy = "^1.23.3"
pyodbc = "^4.0.34"
SQLAlchemy = "^1.4.41"
sqlalchemy-utils = "^0.41.2"
# used by sqlalchemy to connect to MS Access
sqlalchemy-access = "^2.0.2"
# used by sqlalchemy to connect to postgre
psycopg2 = "^2.9.9"
# Use pyarrow.feather instead of feather-format,
# feather.format exists only fo backward compatibility.
# pyarrow is better installed with `pip3 install pyarrow` in the local python,
# don't install pyarrow with poetry add, plenty of error messages ensue.
pyarrow = "^9.0.0"
dynaconf = "^3.1.11"
rich= "^12.5.1"
typer = "^0.9.0"
tomli = "^2.0.1"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
# numba added to allow poetry add of pyOD
# https://github.com/python-poetry/poetry/issues/6265
numba = "~0.56.0"
pyod = "^1.0.7"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ruamel.yaml",
    "io",
    "scipy",
    "dynaconf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
